--- a/pom.xml
+++ b/pom.xml
@@ -6,25 +6,60 @@
     <parent>
         <groupId>de.eitco</groupId>
         <artifactId>eitco-oss-parent</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.6</version>
     </parent>
 
 
-    <!-- TODO: replace with your coordinates -->
-    <groupId>de.eitco</groupId>
-    <artifactId>eitco-maven-template</artifactId>
+    <groupId>de.eitco.cicd</groupId>
+    <artifactId>dotnet-maven-plugin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <description>
+        a maven plugin providing a build lifecycle for dotnet
+    </description>
+
     <developers>
-        <!-- TODO: add developers concerned -->
+        <developer>
+            <name>Jan Schwarz</name>
+            <email>jschwarz@eitco.de</email>
+        </developer>
     </developers>
 
     <scm>
-        <!-- TODO: replace with your repository url -->
-        <url>https://github.com/eitco/maven-template.git</url>
-        <connection>scm:git:https://github.com/eitco/maven-template.git</connection>
-        <developerConnection>scm:git:https://github.com/eitco/maven-template.git</developerConnection>
+        <url>https://github.com/eitco/dotnet-maven-plugin</url>
+        <connection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</developerConnection>
     </scm>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.11.5</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
