--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.eitco.cicd</groupId>
     <artifactId>dotnet-maven-plugin</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <description>
@@ -29,7 +29,7 @@
         <url>https://github.com/eitco/dotnet-maven-plugin.git</url>
         <connection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</developerConnection>
-      <tag>0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 
