inspect test error only occurring in ci

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             </plugin>
             <plugin>
                 <artifactId>maven-invoker-plugin</artifactId>
+                <configuration>
+                    <debug>true</debug>
+                    <showErrors>true</showErrors>
+                    <streamLogsOnFailures>true</streamLogsOnFailures>
+                </configuration>
             </plugin>
         </plugins>
     </build>
