--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
             <plugin>
                 <artifactId>maven-invoker-plugin</artifactId>
                 <configuration>
-                    <debug>true</debug>
+<!--                    <debug>true</debug>-->
                     <showErrors>true</showErrors>
                     <streamLogsOnFailures>true</streamLogsOnFailures>
                 </configuration>
