--- a/src/it/modules/dependency/src/test/cs/dependency-test.csproj
+++ b/src/it/modules/dependency/src/test/cs/dependency-test.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <BaseOutputPath>..\..\..\target\bin</BaseOutputPath>
-        <BaseIntermediateOutputPath>..\..\..\target\obj</BaseIntermediateOutputPath>
-        <OutputPath>..\..\..\target\obj</OutputPath>
-        <MSBUildProjectExtensionsPath>..\..\..\target\obj</MSBUildProjectExtensionsPath>
+        <BaseOutputPath>..\..\..\target\test\bin</BaseOutputPath>
+        <BaseIntermediateOutputPath>..\..\..\target\test\obj</BaseIntermediateOutputPath>
+        <OutputPath>..\..\..\target\test\obj</OutputPath>
+        <MSBUildProjectExtensionsPath>..\..\..\target\test\obj</MSBUildProjectExtensionsPath>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk"/>
