--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,10 +7,11 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: eitco/maven-release@0.0.1
+      - uses: eitco/maven-release@0.0.2
         with:
           gpg-private-key: ${{ secrets.ARTIFACT_SIGNING_GPG_PRIVATE_KEY }}
           gpg-key-name: ${{ secrets.ARTIFACT_SIGNING_GPG_KEY_NAME }}
           gpg-passphrase: ${{ secrets.ARTIFACT_SIGNING_GPG_PRIVATE_KEY_PASSWORD }}
           deploy-user: ${{ secrets.OSSRH_JIRA_USERNAME }}
           deploy-password: ${{ secrets.OSSRH_JIRA_PASSWORD }}
+          git-ssh-private-key: ${{ secrets.SSH_KEY_EITCO_GITHUB }}
