--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>de.eitco.cicd</groupId>
     <artifactId>dotnet-maven-plugin</artifactId>
-    <version>0.0.8-SNAPSHOT</version>
+    <version>0.0.8</version>
     <packaging>maven-plugin</packaging>
 
     <name>${project.artifactId}</name>
@@ -31,7 +31,7 @@
         <url>https://github.com/eitco/dotnet-maven-plugin.git</url>
         <connection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/eitco/dotnet-maven-plugin.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>0.0.8</tag>
     </scm>
 
     <properties>
